# konductor

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini  sequential_stack.yaml  simple_agent_stack.yaml
examples/: __init__.py  complex_workflow_example.yaml  loop_agent_example.yaml  parallel_agent_example.yaml  sequential_stack.yaml  simple_agent_stack.yaml
generated_agent/: agent.py  main.py  tools.py
konductor/: __init__.py  agent_py.j2  cli.py  generator.py  parser.py
konductor/core/: __init__.py  generator.py  models.py  parser.py
konductor/providers/: __init__.py  base.py
konductor/providers/google_adk/: __init__.py  generator.py  models.py
konductor/providers/google_adk/templates/: agent.py.j2  main.py.j2  tools.py.j2
tests/: __init__.py  test_cli.py  test_integration.py
tests/core/: __init__.py  test_models.py  test_parser.py
tests/fixtures/: test_manifests.py
tests/providers/: __init__.py
tests/providers/google_adk/: __init__.py  test_generator.py
tools/: analysis_tools.py  document_tools.py  image_tools.py  language_tools.py  loop_control.py  search_tools.py  verification_tools.py  weather.py
