[project]
name = "konductor"
version = "0.1.0"
description = "A declarative configuration engine for building AI Agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.10.0",
    "jinja2>=3.1.6",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
]

[project.scripts]
konductor = "konductor.cli:main"
